--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.1.3"
+    "astro": "^4.1.3",
+    "netlify-cms-app": "^2.15.72"
+  },
+  "devDependencies": {
+    "@stackbit/cms-git": "^1.0.17",
+    "@stackbit/types": "^2.1.12"
   }
 }
